--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
+storage
 
 # Laravel 5 & Lumen specific
 public/storage
@@ -13,7 +11,6 @@ public/hot
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
-public_html/hot
 
 storage/*.key
 .env
