--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mui/material": "^5.15.20",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-quill": "^2.0.0",
         "react-router-dom": "^6.23.1",
         "react-toastify": "^10.0.5"
     }
