--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "stevebauman/location": "^7.3"
+        "stevebauman/location": "^7.3",
+        "stichoza/google-translate-php": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
