--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "react-helmet": "^6.1.0",
         "react-quill": "^2.0.0",
         "react-router-dom": "^6.23.1",
-        "react-toastify": "^10.0.5"
+        "react-slick": "^0.30.2",
+        "react-toastify": "^10.0.5",
+        "slick-carousel": "^1.8.1"
     }
 }
