--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mui/x-data-grid": "^7.7.0",
         "html-react-parser": "^5.1.10",
         "react": "^18.3.1",
+        "react-calendar": "^5.0.0",
         "react-dom": "^18.3.1",
         "react-helmet": "^6.1.0",
         "react-masonry-css": "^1.0.16",
