--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-helmet": "^6.1.0",
         "react-masonry-css": "^1.0.16",
         "react-quill": "^2.0.0",
+        "react-responsive": "^10.0.0",
         "react-router-dom": "^6.23.1",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
