--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-quill": "^2.0.0",
         "react-responsive": "^10.0.0",
         "react-router-dom": "^6.24.1",
+        "react-share": "^5.1.0",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
         "slick-carousel": "^1.8.1"
