--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "html-react-parser": "^5.1.10",
         "quill-better-table": "^1.2.10",
         "quill-table": "^1.0.0",
+        "quill-table-ui": "^1.0.7",
         "react": "^18.3.1",
         "react-calendar": "^5.0.0",
         "react-dom": "^18.3.1",
