--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-share": "^5.1.0",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
+        "react-transition-group": "^4.4.5",
         "slick-carousel": "^1.8.1"
     }
 }
