--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^42.0.1",
+        "@ckeditor/ckeditor5-image": "^42.0.1",
+        "@ckeditor/ckeditor5-react": "^8.0.0",
+        "@ckeditor/ckeditor5-upload": "^42.0.1",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.20",
@@ -20,6 +24,7 @@
         "@mui/x-data-grid": "^7.7.0",
         "html-react-parser": "^5.1.10",
         "quill-better-table": "^1.2.10",
+        "quill-image-uploader": "^1.3.0",
         "quill-table": "^1.0.0",
         "quill-table-ui": "^1.0.7",
         "react": "^18.3.1",
