--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@mui/lab": "^5.0.0-alpha.170",
         "@mui/material": "^5.15.21",
         "@mui/x-data-grid": "^7.7.0",
+        "country-data": "^0.0.31",
         "html-react-parser": "^5.1.10",
         "quill-better-table": "^1.2.10",
         "quill-image-uploader": "^1.3.0",
