--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-calendar": "^5.0.0",
         "react-dom": "^18.3.1",
         "react-helmet": "^6.1.0",
+        "react-intersection-observer": "^9.13.0",
         "react-masonry-css": "^1.0.16",
         "react-quill": "^2.0.0",
         "react-responsive": "^10.0.0",
