--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-image-optimizer": "^1.8",
         "stevebauman/location": "^7.3",
         "stichoza/google-translate-php": "^5.1"
     },
