--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ storage
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
+public/sitemap.xml
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
