--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@mui/icons-material": "^5.16.4",
         "@mui/lab": "^5.0.0-alpha.172",
         "@mui/material": "^5.16.4",
+        "@mui/system": "^6.1.1",
         "@mui/x-data-grid": "^7.7.0",
         "country-data": "^0.0.31",
         "html-react-parser": "^5.1.10",
