--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Homestead.json
 app/Http/Middleware/GeoRedirectMiddleware.php
 resources/js/App/services/api.jsx
 resources/js/App/services/api.jsx
+resources/js/App/Site/services/api.jsx
